assets/css/style.css
/* --------------------------------------------- VARIABLES */


:root {
  --background-transparent: rgba(0, 0, 0, .6);
  --background-solid: #000;
  
  --border: #f00;
  --border-secondary: #b5e2ac;
  --border-highlight: #ff0;

  --font-color-general: #b5e2ac;
  --font-color-accent: #0ddd1e;
  --font-color-accent-secondary: #f57d0d;
  --font-color-highlight: #f00;
  

  --font-title: 'karmatic_arcaderegular', 'Impact', sans-serif;
  --font-general: 'arcaderegular', 'Courier', monospace;
  --font-game-name: 'pacfontregular', 'Consolas', monospace;
}


/* --------------------------------------------- FONTS */


/*! Generated by Font Squirrel (https://www.fontsquirrel.com) */

@font-face {
  font-family: 'karmatic_arcaderegular';
  src: url('./fonts/ka1-webfont.woff2') format('woff2'),
       url('./fonts/ka1-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'pacfontregular';
  src: url('./fonts/pac-font-webfont.woff2') format('woff2'),
       url('./fonts/pac-font-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'arcaderegular';
  src: url('./fonts/arcade-webfont.woff2') format('woff2'),
       url('./fonts/arcade-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}


/* --------------------------------------------- GLOBAL */


* {
  border: none;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  height: 100vh;

  background: var(--background-solid) 
    url('../img/background/space.webp') 
    no-repeat 
    center / cover;
  
  font-family: var(--font-general);
  color: var(--font-color-general);
}

ul {
  list-style-type: none;
}


/* SCROLLBARS */

.scrollbar::-webkit-scrollbar {
  width: .3rem;
}

.scrollbar::-webkit-scrollbar-thumb {
  background-color: var(--font-color-accent);
}


/* CONTAINERS */

.outer-container {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;

  background-color: var(--background-transparent);

  display: flex;
  align-items: center;
  justify-content: center;
}

.inner-container {
  width: 95%;
  height: max-content;
  max-width: 700px;
  max-height: 90vh;

  overflow-y: auto;

  background-color: var(--background-transparent);
  backdrop-filter: blur(3px);
  border: double 4px var(--border);
  
  font-weight: 300;
  text-align: center;
  text-transform: uppercase;
}


/* BUTTONS */

.buttons {
  margin: 5vh auto;
  width: max-content;

  display: flex;
  flex-direction: column;
}

.buttons .btn {
  padding: 10px 30px 6px;
  width: 100%;

  font-family: var(--font-general);
  font-size: 2rem;
  line-height: 0.5;
  letter-spacing: 5px;
  text-transform: uppercase;
  color: var(--font-color-accent);

  background-color: inherit;
  border: double 4px transparent;
  cursor: pointer;

  transition: .3s;
}

.buttons .btn:hover {
  background-color: var(--background-solid);
  border: double 4px var(--border);
 }

.buttons .btn:active {
  background-color: var(--border);
  border: double 4px var(--background-solid);
 }


/* LOGO */

.logo {
  padding-top: 2vh;
  font-size: 3rem;
}


/* TEXT */

h2 {
  padding-top: 3vh;
  
  font-family: var(--font-title);
  font-size: 2.5rem;
  line-height: 1;
  letter-spacing: 5px;
  text-transform: uppercase;
  color: var(--font-color-accent);
  text-shadow: 2px 2px 10px var(--font-accent);
}


/* BREAK LINES */

.br-tablet,
.br-mobile,
.br-xs {
  display: none;
}


/* --------------------------------------------- ENTER PLAYER SCREEN */


.enter-player .heading-bundle {
  margin: 0 auto;
  width: max-content;
  max-width: 90%;
}

.enter-player .heading-bundle h3 {
  padding-top: 1vh;
  
  font-size: 2rem;
  font-weight: normal;
  line-height: 1;
  letter-spacing: 5px;
  text-align: end;
  text-transform: uppercase;
}

.enter-player form .input-container {
  margin-top: 5vh;
}

.enter-player form .player-input {
  padding: 5px 10px;
  
  font-family: var(--font-general);
  font-size: 3rem;
  line-height: 1;
  color: var(--font-color-highlight);
  text-align: center;
  
  background-color: transparent;
  border: 2px solid var(--border-secondary);
}

.enter-player form .player-input::placeholder{
  color: var(--border-secondary);
  opacity: 30%;
}

.enter-player form .player-input:focus-visible {
  outline: none;
  border: 2px solid var(--border-highlight);
}

.enter-player form .validation {
  margin-top: 2vh;
  height: 2.5rem;
  
  font-size: 1.3rem;
  font-weight: bold;
  
  opacity: 70%;
}

.enter-player form .validation .error {
  min-height: max-content;
  color: var(--font-color-highlight);
}

.enter-player form .validation .error-length {
  display: none;
}

.enter-player form .validation .error-char {
  display: none;
}


/* --------------------------------------------- LEADERBOARD */


.leaderboard {
 display: none;
}

.leaderboard .highscore-list {
  margin: auto auto;
  padding-top: 4vh;
  width: max-content;
}

.leaderboard .highscore-list li {
  margin-top: .5vh;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  
  font-size: 2rem;
  letter-spacing: 2px;
  text-transform: uppercase;
}

.leaderboard .highscore-list .highlight-score,
.leaderboard .highscore-list .highlight-score span {
  color: var(--font-color-highlight);
}

.leaderboard .highscore-list li span {
  padding-left: 50px;
  
  font-size: 2.5rem;
  color: var(--font-color-accent-secondary);
}

.leaderboard .current-score {
  margin-top: 4vh;

  font-size: 2.5rem;
  font-weight: bold;
  text-shadow: 2px 2px 5px var(--font-general);
}

.leaderboard .current-score span {
  padding-left: 5px;

  font-size: 3rem;
  color: var(--font-color-accent-secondary);
  text-shadow: 2px 2px 5px var(--font-accent-secondary);
}

.leaderboard .btn:not(.leaderboard .btn:first-of-type) {
  margin-top: 1vh;
}


 /* --------------------------------------------- MEDIA QUERIES */


 /* TABLET */

@media screen and (max-width: 780px) {
  /* ---------------------------- GENERAL*/

  /* BUTTONS */

  .buttons {
    margin: 3vh auto;
  }
  
  .buttons .btn {
    padding-right: 15px;
    padding-left: 15px; 

    font-size: 1.7rem;
    border-color: var(--border);
  }

  /* TEXT */

  h2 {
    font-size: 2rem;
    line-height: 1.5;
  }

  /* BREAK LINES */

  .br-tablet {
    display: block;
  }


  /* ---------------------- ENTER PLAYER */
  
  .enter-player .heading-bundle h3 {  
    font-size: 1.7rem;
    line-height: 0.8;
    letter-spacing: 3px;
    text-align: center;
  }
  
  .enter-player form .input-container {
    margin-top: 4vh;
  }
  
  .enter-player form .player-input {
    font-size: 2.5rem;
  }


  /* ----------------------- LEADERBOARD */

  .leaderboard .highscore-list li {
    margin-top: .2vh;
    font-size: 1.7rem;
  }

  .leaderboard .highscore-list li span {
    padding-left: 20px;
    font-size: 2rem;
  }

  .leaderboard .current-score {
    margin-top: 4vh;
    font-size: 2rem;
  }
  
  .leaderboard .current-score span {
    font-size: 2.3rem;
  }
}


/* MOBILE */

@media screen and (max-width: 480px) {
  /* LEADERBOARD */

  .leaderboard h2 .br-mobile {
    display: block;
  }

  .leaderboard .highscore-list li span {
    font-size: 1.5rem;
  }

  .leaderboard .current-score {
    display: flex;
    flex-direction: column;
  }
  
  .leaderboard .buttons .btn {
    font-size: 1.3rem;
  }
}


/* EXTRA SMALL */

@media screen and (max-width: 280px) {
  /* LEADERBOARD */

  .leaderboard h2 {
    font-size: 1.1rem;
  }
  
  .leaderboard .highscore-list li {
    flex-direction: column;
    font-size: 1rem;
  }

  .leaderboard .highscore-list 
  li:not(.leaderboard .highscore-list li:first-of-type) {
    margin-top: 1vh;
  }

  .leaderboard .highscore-list li span {
    padding-left: 0;
    font-size: 1.2rem;
    text-decoration: underline;
  }

  .leaderboard .current-score {
    font-size: 1.3rem;
  }
  
  .leaderboard .current-score span {
    font-size: 1.5rem;
  }
  
  .leaderboard .buttons .btn {
    padding-right: 5px;
    padding-left: 5px; 
    font-size: 1rem;
    line-height: 1;
  }
  
  .leaderboard .buttons .btn:last-of-type {
    margin-bottom: 3vh;
  }

  .leaderboard .buttons .btn .br-xs {
    display: block;
  }
}

